# shuru

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish-crates.yml
crates/shuru-cli/: Cargo.toml
crates/shuru-cli/src/: cli.rs  config.rs  stdio.rs  vm.rs
crates/shuru-cli/tests/: rw_mounts.rs
crates/shuru-darwin/: Cargo.toml
crates/shuru-guest/: Cargo.toml
crates/shuru-guest/src/: main.rs
crates/shuru-linux/: Cargo.toml
crates/shuru-linux/src/: entropy.rs  lib.rs  memory_balloon.rs  storage.rs  terminal.rs  vm.rs
crates/shuru-linux/src/kvm/: devices.rs  layout.rs  mod.rs  virtio_fs.rs
crates/shuru-proto/: Cargo.toml
crates/shuru-proto/src/: frame.rs  lib.rs
crates/shuru-proxy/: Cargo.toml
crates/shuru-proxy/src/: config.rs  dns.rs  proxy.rs  stack.rs
crates/shuru-sdk/: Cargo.toml
crates/shuru-sdk/src/: lib.rs
crates/shuru-store/: Cargo.toml
crates/shuru-store/src/: cas.rs  lib.rs  nbd.rs
crates/shuru-vm/: Cargo.toml
crates/shuru-vm/src/: lib.rs  sandbox.rs
