[workspace]
resolver = "2"
members = [
    "crates/shuru-cli",
    "crates/shuru-darwin",
    "crates/shuru-linux",
    "crates/shuru-proto",
    "crates/shuru-proxy",
    "crates/shuru-sdk",
    "crates/shuru-vm",
    "crates/shuru-store",
    "crates/shuru-guest",
]
# shuru-darwin and shuru-linux are platform-specific — only pulled in
# transitively via shuru-vm's cfg'd deps. Excluded from default builds
# so `cargo check` doesn't fail on the wrong OS.
default-members = [
    "crates/shuru-cli",
    "crates/shuru-proto",
    "crates/shuru-proxy",
    "crates/shuru-sdk",
    "crates/shuru-vm",
    "crates/shuru-store",
    "crates/shuru-guest",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
