[package]
name = "shuru-sdk"
version = "0.3.2"
edition = "2021"
description = "Async Rust SDK for Shuru microVMs"
license = "Apache-2.0"
repository = "https://github.com/superhq-ai/shuru"

[features]
default = []
cas = ["shuru-store", "blake3"]

[dependencies]
shuru-vm = { version = "0.3.1", path = "../shuru-vm" }
shuru-proto = { version = "0.3.0", path = "../shuru-proto" }
shuru-proxy = { version = "0.2.1", path = "../shuru-proxy" }
shuru-store = { version = "0.1.0", path = "../shuru-store", optional = true }
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
blake3 = { version = "1", optional = true }
libc = "0.2"
tracing = "0.1"
